@@ -3,9 +3,10 @@
 -----
 
 - Feature 1526976: Add support for Apple Xcode 3
-- clean now removes MonoDevelop .pidb files correctly
-- added os.executef()
 - Feature 2900623: Add targetsuffix and implibsuffix properties
+- Added project kind to list of configuration filters
+- Clean action now removes MonoDevelop .pidb files correctly
+- Added os.executef()
 
 -------
  4.1.2
